<resources>
    <string name="app_name">Gate Dispatcher</string>
    <string name="gate">Open Gate</string>
    <string name="clear_logs">Clear Logs</string>
    <string name="gate_state_change_action_title">Gate state changed</string>
    <string name="manage_overlay_permissions">Allow Gate Dispatcher to display over other apps</string>

    <string name="action_settings">Settings</string>
    <string name="action_logging">Logging</string>
    <string name="action_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_logging">Logging</string>
    <string name="title_activity_about">About</string>

    <string name="settings_header">Configuration Settings</string>
    <string name="phone_number">Dialing Phone Number</string>
    <string name="activation_text">Gate Activation Text</string>
    <string name="inclusion_list">Phone Numbers Inclusion List</string>
    <string name="exclusion_list">Phone Numbers Exclusion List</string>
    <string name="about_text">This is a open source project created under Apache License Version 2.0 for a small personal gate dispatcher system</string>
    <string name="github_text">All sources designs are available on:</string>
    <string name="github_link">https://github.com/calinrc/gate_displatcher</string>
    <string name="todo">TODO</string>

</resources>